--- a/DeviceMonitorCS/MainWindow.xaml
+++ b/DeviceMonitorCS/MainWindow.xaml
@@ -225,7 +225,7 @@
                     <!-- App Header -->
                     <StackPanel x:Name="SidebarHeader" Grid.Row="1" Margin="0,5,0,20" Visibility="Visible">
                         <!-- Simple Logo or Icon for Sidebar -->
-                        <TextBlock Text="&#xF410;" FontFamily="Segoe MDL2 Assets" FontSize="24" Foreground="#00F0FF" HorizontalAlignment="Center"/>
+                        <TextBlock Text="&#xEA18;" FontFamily="Segoe MDL2 Assets" FontSize="24" Foreground="#00F0FF" HorizontalAlignment="Center"/>
                         <TextBlock Text="AUTO COMMAND" FontSize="10" FontWeight="Black" Foreground="#00F0FF" HorizontalAlignment="Center" Margin="0,5,0,0"/>
                     </StackPanel>
 
