--- a/DeviceMonitorCS/Views/DashboardView.xaml
+++ b/DeviceMonitorCS/Views/DashboardView.xaml
@@ -205,11 +205,11 @@
                 <!-- Windows Defender -->
                 <Border Grid.Row="0" Style="{StaticResource MetricCard}" Margin="0,0,0,5">
                     <Grid>
-                        <!-- Inner Radiant Glow (Top-Center, Narrow) -->
+                        <!-- Inner Radiant Glow (Top-Center, Ultra-Soft Aurora) -->
                         <Border CornerRadius="10">
                             <Border.Background>
-                                <RadialGradientBrush Center="0.5,0" GradientOrigin="0.5,0" RadiusX="0.5" RadiusY="0.7">
-                                    <GradientStop Color="#504ADE80" Offset="0"/>
+                                <RadialGradientBrush Center="0.5,0" GradientOrigin="0.5,0" RadiusX="0.8" RadiusY="1.2">
+                                    <GradientStop Color="#184ADE80" Offset="0"/>
                                     <GradientStop Color="Transparent" Offset="1"/>
                                 </RadialGradientBrush>
                             </Border.Background>
@@ -257,11 +257,11 @@
                 <!-- Firewall -->
                 <Border Grid.Row="1" Style="{StaticResource MetricCard}" Margin="0,5,0,0">
                     <Grid>
-                        <!-- Inner Radiant Glow (Top-Center, Narrow) -->
+                        <!-- Inner Radiant Glow (Top-Center, Ultra-Soft Aurora) -->
                         <Border CornerRadius="10">
                             <Border.Background>
-                                <RadialGradientBrush Center="0.5,0" GradientOrigin="0.5,0" RadiusX="0.5" RadiusY="0.7">
-                                    <GradientStop Color="#50F59E0B" Offset="0"/>
+                                <RadialGradientBrush Center="0.5,0" GradientOrigin="0.5,0" RadiusX="0.8" RadiusY="1.2">
+                                    <GradientStop Color="#18F59E0B" Offset="0"/>
                                     <GradientStop Color="Transparent" Offset="1"/>
                                 </RadialGradientBrush>
                             </Border.Background>
